fixing sonar issue